--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -1,19 +1,3 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-html {
-  font-size: 1rem;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 body {
-  background-color: #f9fafb;
-}
-
-a {
-  text-decoration: none;
+  background-color: #232e42;
 }
